# SimpleVolumeRenderer

./: CMakeLists.txt  readme.md
code/LibSimple/: CMakeLists.txt  QVolumeRenderer.cpp  SimpleGL.h  SimpleRayCastPass.cpp  SimpleVR.cpp
config/: VolumeRendering.ini
config/data/carp/: carp.mhd  readme.txt
tools/VolumeRendering/: CMakeLists.txt  QVolumeRenderer.h  dvr.cpp
